--- a/HatcoFilesClosedProcessor/HatcoFilesClosedProcessor.csproj
+++ b/HatcoFilesClosedProcessor/HatcoFilesClosedProcessor.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Processor.cs" />
+    <Compile Include="ProcessorWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
