--- a/HatcoFilesClosedProcessor/HatcoFilesClosedProcessor.csproj
+++ b/HatcoFilesClosedProcessor/HatcoFilesClosedProcessor.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ProcessorWork.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringDistance.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
